      random effects model (list components 'TE.direct.random',
      'seTE.direct.random', ..., 'pval.direct.random'); so far results
      from fixed effect model have been used
    - netmeasures() does not result in an error if no or only one
      study with two treatments is available

 ** User-visible changes **
    
  * New arguments random and tau.preset in netmeasures()

 ** Internal changes **

  * nma.ruecker():
    bug fix such that estimates from random effects model are used for
    direct treatment estimates if argument 'tau.direct' is larger than
    zero

  * nma.krahn():
    bug fix such that use of function does not result in an error if
    either no or only one study with two treatments is available

  * chkmultiarm():
    new internal function to check consistency of treatment effects
    and variances in multi-arm studies; calls ginv() from MASS library

*** netmeta, version 0.9-2, 2016-11-19 ***

 ** Major changes **

  * R package rgl moved from imported to suggested packages as
    - 3-D network plots are not essential for network meta-analysis
    - installation of netmeta package breaks under Mac OS if XQuartz
      is not available
    
 ** User-visible changes **
    
  * Help page of netgraph() updated (information on rgl package)

 ** Internal changes **

  * Use chkclass() from meta package to check for class membership


*** netmeta, version 0.9-1, 2016-10-13 ***

 ** Major changes **

  * Number of studies can be added to network graph

  * Distance matrix can be provided directly to generate network graph
  
  * shadowtext() from TeachingDemos package by Greg Snow added to
    netmeta package

  * P-scores can be printed in forest plot
  
 ** User-visible changes **
    
  * help page with brief overview of netmeta package added

  * netgraph():
    - new arguments to add number of studies to network graph
      (number.of.studies, cex.number.of.studies,
      col.number.of.studies, bg.number.of.studies)     