@@ -2,57 +2,88 @@
 \alias{netsplit}
 \alias{print.netsplit}
 
-\title{Split into direct and indirect evidence}
+\title{Split direct and indirect evidence in network meta-analysis}
 
 \description{
-  ...
+  Split contribution of direct and indirect evidence in network meta-analysis.
 }
 
 \usage{
 netsplit(x)
 
 \method{print}{netsplit}(x,
-        comb.fixed = x$comb.fixed,
-        comb.random = x$comb.random,
-        digits = gs("digits"),
-        digits.zval = gs("digits.zval"),
-        digits.pval = gs("digits.pval"),
-        text.NA = ".", backtransf = TRUE,
-        showall = FALSE, ...)
+      comb.fixed = x$comb.fixed,
+      comb.random = x$comb.random,
+      digits = gs("digits"),
+      digits.zval = gs("digits.zval"),
+      digits.pval = gs("digits.pval"),
+      text.NA = ".", backtransf = TRUE,
+      showall = TRUE, ...)
 }
 
 \arguments{
-  \item{x}{netmeta() or netsplit() object.}
-  \item{comb.fixed}{A logical indicating whether a fixed effect
-    meta-analysis should be conducted.}
-  \item{comb.random}{A logical indicating whether a random effects
-    meta-analysis should be conducted.}
-  \item{digits}{Minimal number of significant digits, see \code{print.default}.}
-  \item{digits.zval}{Minimal number of significant digits for z- or
-    t-value, see \code{print.default}.}
+  \item{x}{An object of class \code{netmeta} or \code{netsplit}.}
+  \item{comb.fixed}{A logical indicating whether results for fixed
+    effect model should be printed.}
+  \item{comb.random}{A logical indicating whether results for random
+    effects model should be printed.}
+  \item{digits}{Minimal number of significant digits, see
+    \code{print.default}.}
+  \item{digits.zval}{Minimal number of significant digits for z-value
+    of test of agreement between direct and indirect evidence, see
+    \code{print.default}.}
   \item{digits.pval}{Minimal number of significant digits for p-value
-    of overall treatment effect, see \code{print.default}.}
+    of test of agreement between direct and indirect evidence, see
+    \code{print.default}.}
   \item{backtransf}{A logical indicating whether printed results
     should be back transformed. For example, if
     \code{backtransf=TRUE}, results for \code{sm="OR"} are printed as
     odds ratios rather than log odds ratios.}
-  \item{text.NA}{...}
-  \item{showall}{A logical ...}
+  \item{text.NA}{A character string specifying text printed for
+    missing values.}
+  \item{showall}{A logical indicating whether all comparisons
+    (default) or only comparisons contributing both direct and
+    indirect evidence should be printed.}
   \item{...}{Additional arguments (ignored at the moment)}
+}
+
+\details{
+  Direct and indirect treatment estimates are calculated in
+  \code{\link{netmeta}}. This function combines and prints these
+  estimates in a user-friendly way.
 }
 
 \value{
   An object of class \code{netsplit} with corresponding
   \code{print} function. The object is a list containing the following
   components:
-  \item{...}{...}
-  \item{call}{Function call.}
+  \item{comb.fixed, comb.random}{As defined above.}
+  \item{comparison}{A vector with treatment comparisons.}
+  \item{prop.fixed, prop.random}{A vector with direct evidence
+    proportions (fixed effect / random effects model).}
+  \item{fixed, random}{Results of network meta-analysis (fixed effect
+    / random effects model), i.e., list with vectors TE, seTE, lower,
+    upper, z, and p.}
+  \item{direct.fixed, direct.random}{Network meta-analysis results
+    based on direct evidence (fixed effect / random effects model),
+    i.e., list with vectors TE, seTE, lower, upper, z, and p.}
+  \item{indirect.fixed, indirect.random}{Network meta-analysis results
+    based on indirect evidence (fixed effect / random effects model),
+    i.e., list with vectors TE, seTE, lower, upper, z, and p.}
+  \item{compare.fixed, compare.random}{Comparison of direct and
+    indirect evidence in network meta-analysis (fixed effect / random
+    effects model), i.e., list with vectors TE, seTE, lower, upper, z,
+    and p.}
+  \item{sm}{A character string indicating underlying summary measure}  
+  \item{level.comb}{The level used to calculate confidence intervals for
+    pooled estimates.}
   \item{version}{Version of R package netmeta used to create object.}
 }
 
-\author{Guido Schwarzer \email{sc@imbi.uni-freiburg.de}, Gerta Rücker \email{ruecker@imbi.uni-freiburg.de}}
+\author{Guido Schwarzer \email{sc@imbi.uni-freiburg.de}, Gerta Rücker
+\email{ruecker@imbi.uni-freiburg.de}}
 
-\seealso{\code{\link{netmeta}}}
+\seealso{\code{\link{netmeta}}, \code{\link{netmeasures}}}
 
 \examples{
 data(Woods2010)
